# OC-Sac-a-dos

./: .gitignore  CMakeLists.txt
src/: kpSolverBB.cpp  kpSolverDP.cpp  kpSolverGreedy.cpp  kpSolverHeurDP.cpp  nodeBB.cpp
test/: testBB.cpp  testIterHeur.cpp
